# tlab

./: .gitignore  README.md  note  pyproject.toml  reg  test
src/tlab/: .x.swp  __init__.py  b.xyz  cis.xyz  ecis.xyz  geom.py  linalg.py  matrix.py  mrci.xyz  pdf.py  sf.xyz  solver.py  x
