[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "tlab"
version = "0.1.8"
description = "Internal use within tsuchimochi lab"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [{name = "Takashi Tsuchimochi", email = "tsuchimochi@gmail.com"}]
dependencies = ["numpy>=1.20"]

[project.urls]
Homepage = "https://github.com/tsuchimoc/tlab"
Issues = "https://github.com/tsuchimoc/tlab/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/tlab"]

